--- a/vis_1.Rmd
+++ b/vis_1.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For moredetails on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
@@ -67,26 +67,127 @@ ggp_weather_scatterplot
 ```
 
 
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax)) +
+  geom_point(aes(color=name), alpha = .3, size = .8)+
+  geom_smooth(se = FALSE)
+```
+
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = .3) +
+  geom_smooth(se = FALSE) +
+  facet_grid(. ~ name)
+
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = date, y = tmax, color = name)) +
+  geom_point() +
+  geom_smooth(se = FALSE) +
+facet_grid(. ~ name)
+```
+
+
+```{r}
+weather_df |>
+  filter(name == "CentralPark_NY") |>
+  mutate(
+    tmax_fahr = tmax * (9/5) + 32,
+    tmin_fahr = tmin * (9/5) + 32
+  ) |>
+  ggplot(aes(x = tmin_fahr, y = tmax_fahr)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE)
+
+```
+
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, fill = name)) +
+  geom_density(alpha 0 .3)
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax, color = "blue")) +
+  geom_point()
+```
+
+```{r}
+#univariate plots
+weather_df |>
+  ggplot(aes(x=tmin)) +
+  geom_histogram()
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = tmin, fill = name)) +
+  geom_histogram(position = "dodge")
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = name, y = tmin, fill = name)) +
+  geom_boxplot()
+```
+
+```{r}
+weather_df |>
+  ggplot(aes(x = name, y = tmin, fill = name)) +
+  geom_violin()
+```
+```{r}
+library(ggridges)
+```
+
+
+```{r}
+
+weather_df |>
+  ggplot(aes(x = tmin, y = name)) +
+  geom_density_ridges()
+```
 
 
 
+```{r}
+weather_df |>
+  ggplot(aes(x = prcp, fill = name)) +
+  geom_density(alpha = .3)
 
+weather_df |>
+  ggplot(aes(x = name, y = prcp)) +
+  geom_boxplot()
 
+weather_df |>
+  filter(prcp > 10) |>
+  ggplot(aes(x = prcp, fill = name)) +
+  geom_density(alpha = .3)
+```
 
+```{r}
+ggp_weather =
+  weather_df |>
+  ggplot(aes(x = date, y = tmax, color = name)) +
+  geom_point()
 
+ggsave("ggp-weather.pdf", ggp_weather, width = 8, height = 6)
+```
 
+```{r, fig.width = 12, fig.asp = .6}
+#embedding plots
 
+weather_df |>
+  ggplot(aes(x = ))
 
-
-
-
-
-
-
-
-
-
-
+```
 
 
 
